# course_work_5

./: .gitignore  README.md  config.py  pyproject.toml
src/: utils.py
