[tool.poetry]
name = "course_work_5"
version = "0.1.0"
description = ""
authors = ["Kseniya Avtukhovich <kseniyaav10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.3.0"
psycopg2 = "^2.9.7"
tqdm = "^4.66.1"
enquiries = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
